--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "handlebars": "^4.7.7",
     "handlebars-loader": "^1.7.1",
     "jquery": "^3.6.0",
+    "mysql2": "^2.2.5",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
